--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <center> <b> The Periodic Table </b> </center>
     </h1>
     <center>
-        <table border="1px" style="font-size: 25px; text-align:center">
+        <table border="1px" style="font-size: 25px;text-align:center;">
             <tr>
                 <td style="background-color: rgb(224, 123, 157);"> 1 <br> H </td>
                 <td colspan="16" style="empty-cells: hide;"> </td>
